--- a/app/src/main/res/layout/activity_thanh_toan.xml
+++ b/app/src/main/res/layout/activity_thanh_toan.xml
@@ -9,7 +9,7 @@
         android:id="@+id/toobar"
         app:layout_constraintTop_toTopOf="parent"
         app:title="Thanh toán"
-        android:background="#ff00dfff"
+        android:background="#FFFFFF"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"/>
     <androidx.cardview.widget.CardView
