--- a/app/src/main/res/layout/activity_gio_hang.xml
+++ b/app/src/main/res/layout/activity_gio_hang.xml
@@ -21,7 +21,7 @@
         android:id="@+id/toobar"
         app:layout_constraintTop_toTopOf="parent"
         app:title="Giỏ hàng"
-        android:background="#ff00dfff"
+        android:background="#FFFFFF"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"/>
     <androidx.recyclerview.widget.RecyclerView
@@ -41,11 +41,11 @@
         android:layout_height="wrap_content">
     <TextView
         android:padding="5dp"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="20dp"
         android:layout_weight="1"
         android:text="Tổng tiền: "
         android:textSize="18sp"
-        android:textColor="@android:color/holo_red_light"
+        android:textColor="@color/colortext"
         android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
@@ -57,20 +57,23 @@
         android:layout_marginRight="20dp"
         android:layout_gravity="right"
         android:textSize="18sp"
-        android:textColor="@android:color/holo_red_light"
+        android:textColor="@color/colortext"
         android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
     </LinearLayout>
     <Button
-        android:layout_marginBottom="10dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
         android:id="@+id/btnmuahang"
         android:text="Mua hàng"
+        android:textSize="18dp"
+        android:textColor="#E1FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/background_button"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
