--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -8,20 +8,22 @@
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toobar"
-        app:title=""
-        android:background="#ff00dfff"
+        app:title="Tìm kiếm"
+        android:background="#FFFFFF"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize">
     </androidx.appcompat.widget.Toolbar>
+
     <EditText
-        android:hint="Nhập sản phẩm cần tìm"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
         android:id="@+id/edtsearch"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:hint="Nhập tên sách bạn muốn tìm"
+        android:padding="10dp"
+        android:drawableRight="@drawable/ic_baseline_search_24"
+        android:background="@drawable/custom_edittext"
+        android:layout_margin="10dp"
         app:layout_constraintTop_toBottomOf="@id/toobar"
         />
 
