--- a/app/src/main/res/layout/item_sp_moi.xml
+++ b/app/src/main/res/layout/item_sp_moi.xml
@@ -39,7 +39,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="gia: 150000d"
+                android:text="giá: 150000d"
                 android:textColor="@android:color/holo_red_light"
                 android:textSize="15sp"
                 android:textStyle="bold" />
