--- a/app/src/main/res/layout/activity_chi_tiet.xml
+++ b/app/src/main/res/layout/activity_chi_tiet.xml
@@ -7,23 +7,18 @@
     tools:context=".ChiTietActivity">
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toobar"
-        android:background="#ff00dfff"
-        app:title="chi tiết sản phẩm"
+        android:background="#FFFFFF"
+        app:title="Chi tiết sản phẩm"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize">
-        <FrameLayout
-            android:id="@+id/framegiohang"
-            android:layout_marginRight="10dp"
-            android:layout_gravity="right"
-            android:layout_width="55dp"
-            android:layout_height="?attr/actionBarSize">
             <ImageView
-                android:layout_marginTop="15dp"
                 android:src="@drawable/ic_cart_24"
+                android:layout_marginRight="8dp"
+                android:layout_gravity="right"
                 android:layout_width="40dp"
                 android:layout_height="40dp"/>
-        </FrameLayout>
+
     </androidx.appcompat.widget.Toolbar>
     <LinearLayout
         android:id="@+id/layout1"
@@ -46,10 +41,13 @@
                 android:id="@+id/txttensp"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                android:gravity="center"
+                android:gravity="left"
                 android:text="Tên sản phẩm"
+                android:fontFamily="@font/calibri"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="10dp"/>
             <TextView
                 android:id="@+id/txtgiasp"
                 android:layout_marginTop="5dp"
@@ -63,8 +61,7 @@
             <Spinner
                 android:id="@+id/spinner"
                 android:layout_marginTop="5dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"
+                android:layout_marginHorizontal="10dp"
                 android:background="@drawable/spinner"
                 android:gravity="center"
                 android:layout_width="match_parent"
@@ -74,13 +71,14 @@
                 android:id="@+id/btnthemvaogiohang"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginEnd="20dp"
-                android:textSize="12sp"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginTop="80dp"
+                android:textSize="16sp"
                 android:text="@string/th_m_v_o_gi_h_ng"
+                android:background="@drawable/background_button"
+                android:paddingHorizontal="20dp"
+                android:drawableLeft="@drawable/ic_baseline_add_to_photos_24"
                 android:textColor="@android:color/white"
-                android:backgroundTint="#478188"
                 />
 
         </LinearLayout>
@@ -98,6 +96,7 @@
             android:textSize="20sp"
             android:textStyle="bold"
             android:text="Mô tả chi tiết sản phẩm"
+            android:fontFamily="@font/calibri"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
         <ScrollView
