--- a/app/src/main/res/layout/activity_dang_nhap.xml
+++ b/app/src/main/res/layout/activity_dang_nhap.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DangNhapActivity">
+    tools:context=".activity.DangNhapActivity">
 
     <ImageView
         android:id="@+id/iv_logo"
@@ -49,49 +49,36 @@
             android:textSize="20sp" />
     </LinearLayout>
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/line1"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+    <EditText
+        android:id="@+id/email"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@id/ll_textChao">
+        android:background="@drawable/custom_edittext"
+        android:drawableLeft="@drawable/ic_email"
+        android:drawablePadding="5dp"
+        android:fontFamily="@font/gotham"
+        android:hint="Email"
+        android:inputType="textEmailAddress"
+        android:paddingLeft="10dp"
+        app:layout_constraintTop_toBottomOf="@id/ll_textChao" />
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/email"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:background="@drawable/custom_edittext"
-            android:drawableLeft="@drawable/ic_email"
-            android:drawablePadding="5dp"
-            android:fontFamily="@font/gotham"
-            android:hint="Email"
-            android:inputType="textEmailAddress"
-            android:paddingLeft="10dp" />
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/line2"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+    <EditText
+        android:id="@+id/password"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/line1">
+        android:background="@drawable/custom_edittext"
+        android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
+        android:drawablePadding="5dp"
+        android:fontFamily="@font/gotham"
+        android:hint="Pass"
+        android:inputType="textPassword"
+        android:paddingLeft="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/email" />
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/pass"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:background="@drawable/custom_edittext"
-            android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
-            android:drawablePadding="5dp"
-            android:fontFamily="@font/gotham"
-            android:hint="Pass"
-            android:inputType="textPassword"
-            android:paddingLeft="10dp" />
-    </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
         android:layout_width="wrap_content"
@@ -103,30 +90,30 @@
         android:textColor="@color/colortext"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/line2" />
+        app:layout_constraintTop_toBottomOf="@+id/password" />
 
-    <androidx.appcompat.widget.AppCompatButton
+    <Button
         android:id="@+id/btndangnhap"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="80dp"
         android:background="@drawable/background_button"
         android:text="Đăng nhập"
         android:textColor="@android:color/white"
         android:textSize="18dp"
-        app:layout_constraintTop_toBottomOf="@+id/line2" />
+        app:layout_constraintTop_toBottomOf="@+id/password" />
 
     <TextView
         android:id="@+id/tv_hoac"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="45dp"
+        android:layout_marginTop="50dp"
         android:fontFamily="@font/calibri"
         android:text="Hoặc"
         android:textColor="@color/colortext"
         android:textSize="25sp"
-        android:textStyle="bold"
+        android:textStyle="normal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btndangnhap" />
@@ -144,20 +131,20 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:gravity="center"
             android:orientation="horizontal"
             android:padding="5dp">
 
             <ImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
                 android:src="@drawable/google" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingLeft="10dp"
+                android:paddingLeft="20dp"
                 android:text="Đăng nhập bằng Google"
                 android:textSize="20sp"
                 android:textStyle="bold" />
