--- a/app/src/main/res/layout/activity_gio_hang.xml
+++ b/app/src/main/res/layout/activity_gio_hang.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".GioHangActivity">
+    tools:context=".activity.GioHangActivity">
 
     <TextView
         app:layout_constraintTop_toTopOf="parent"
