--- a/app/src/main/res/layout/activity_tieu_thuyet.xml
+++ b/app/src/main/res/layout/activity_tieu_thuyet.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TieuThuyetActivity">
+    tools:context=".activity.TieuThuyetActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
