--- a/app/src/main/res/layout/activity_gio_hang.xml
+++ b/app/src/main/res/layout/activity_gio_hang.xml
@@ -53,7 +53,7 @@
         android:padding="5dp"
         android:layout_weight="1"
         android:id="@+id/txttongtien"
-        android:text="50.000"
+        android:text="0đ"
         android:layout_marginRight="20dp"
         android:layout_gravity="right"
         android:textSize="18sp"
