--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent">
                     <EditText
+                        android:id="@+id/edt_timkiem"
+                        android:focusable="false"
                         android:layout_width="230dp"
                         android:layout_height="match_parent"
                         android:hint="Tìm kiếm"
@@ -37,6 +39,7 @@
                         android:layout_margin="5dp"/>
 
                     <ImageView
+                        android:id="@+id/iv_ic_cart_24"
                         android:src="@drawable/ic_cart_24"
                         android:layout_marginTop="10dp"
                         android:layout_marginRight="10dp"
@@ -73,7 +76,7 @@
             </ViewFlipper>
             </androidx.cardview.widget.CardView>
             <LinearLayout
-                android:background="@color/colortext"
+                android:background="#E1FFFFFF"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
@@ -89,10 +92,9 @@
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recyclerview"
+                    android:layout_marginVertical="10dp"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginTop="10dp">
+                    android:layout_height="match_parent">
 
                 </androidx.recyclerview.widget.RecyclerView>
 
@@ -102,12 +104,17 @@
             android:id="@+id/navigationview"
             android:layout_gravity="start"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <ListView
-                android:layout_marginTop="10dp"
-                android:id="@+id/listviewmanhinhchinh"
+            android:layout_height="match_parent"
+            app:menu="@menu/navigation_menu_left">
+<!--            <ListView-->
+<!--                android:layout_marginTop="10dp"-->
+<!--                android:id="@+id/listviewmanhinhchinh"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"/>-->
+            <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:text="123"/>
         </com.google.android.material.navigation.NavigationView>
     </androidx.drawerlayout.widget.DrawerLayout>
 
