--- a/app/src/main/res/layout/activity_thanh_toan.xml
+++ b/app/src/main/res/layout/activity_thanh_toan.xml
@@ -34,6 +34,7 @@
                 <ImageView
 
                     android:layout_marginLeft="5dp"
+                    android:layout_marginRight="10dp"
                     android:src="@drawable/ic_baseline_attach_money_24"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
