--- a/app/src/main/res/layout/item_sp_moi.xml
+++ b/app/src/main/res/layout/item_sp_moi.xml
@@ -2,54 +2,80 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:elevation="8dp"
-    android:layout_marginTop="10dp"
+    android:layout_width="180dp"
+    android:layout_height="wrap_content"
     android:layout_marginLeft="10dp"
+    android:layout_marginTop="10dp"
     android:layout_marginRight="10dp"
-    app:cardCornerRadius="4dp"
-    android:layout_width="160dp"
-    android:layout_height="wrap_content">
+    android:elevation="8dp"
+    app:cardCornerRadius="10dp">
+
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="209dp"
+            android:layout_height="250dp"
             android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/itemsp_image"
                 android:layout_width="match_parent"
-                android:layout_height="160dp"
+                android:layout_height="200dp"
+                android:scaleType="centerCrop"
                 android:src="@drawable/ic_media_24" />
 
-            <TextView
-                android:id="@+id/itemsp_ten"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="Truyện"
-                android:textSize="20sp"
-                android:textStyle="bold" />
+                android:layout_height="match_parent"
+                android:background="@drawable/custom_textbackkground"
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/itemsp_gia"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="giá: 150000d"
-                android:textColor="@android:color/holo_red_light"
-                android:textSize="15sp"
-                android:textStyle="bold" />
+                <TextView
+                    android:id="@+id/itemsp_ten"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:gravity="left"
+                    android:text="Truyện"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/itemsp_txtgia"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:gravity="left"
+                        android:text="Giá: "
+                        android:textColor="@android:color/holo_red_light"
+                        android:textSize="15sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/itemsp_gia"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="left"
+                        android:text="150000d"
+                        android:textColor="@android:color/holo_red_light"
+                        android:textSize="15sp"
+                        android:textStyle="bold" />
+                </LinearLayout>
+            </LinearLayout>
         </LinearLayout>
+
         <ImageView
-            android:src="@drawable/iconnew_w512"
-            android:layout_gravity="top|right"
             android:layout_width="30dp"
-            android:layout_height="30dp"/>
+            android:layout_height="30dp"
+            android:layout_gravity="top|right"
+            android:src="@drawable/iconnew_w512" />
     </FrameLayout>
 
 </androidx.cardview.widget.CardView>
