--- a/app/src/main/res/layout/activity_dang_nhap.xml
+++ b/app/src/main/res/layout/activity_dang_nhap.xml
@@ -32,7 +32,7 @@
             android:fontFamily="@font/calibri"
             android:gravity="center"
             android:padding="5dp"
-            android:text="Chào!"
+            android:text="@string/hello"
             android:textColor="@color/colortext"
             android:textSize="35sp"
             android:textStyle="bold" />
@@ -44,7 +44,7 @@
             android:fontFamily="@font/calibri"
             android:gravity="center"
             android:padding="5dp"
-            android:text="Đăng nhập ở đây để tiếp tục"
+            android:text="@string/pls_login"
             android:textColor="#E1000000"
             android:textSize="20sp" />
     </LinearLayout>
@@ -86,7 +86,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginRight="20dp"
         android:fontFamily="@font/calibri"
-        android:text="Quên mật khẩu?"
+        android:text="@string/forgot_password"
         android:textColor="@color/colortext"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -99,7 +99,7 @@
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="80dp"
         android:background="@drawable/background_button"
-        android:text="Đăng nhập"
+        android:text="@string/login"
         android:textColor="@android:color/white"
         android:textSize="18dp"
         app:layout_constraintTop_toBottomOf="@+id/password" />
@@ -110,7 +110,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:fontFamily="@font/calibri"
-        android:text="Hoặc"
+        android:text="@string/or"
         android:textColor="@color/colortext"
         android:textSize="25sp"
         android:textStyle="normal"
@@ -145,7 +145,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingLeft="20dp"
-                android:text="Đăng nhập bằng Google"
+                android:text="@string/login_Google"
                 android:textSize="20sp"
                 android:textStyle="bold" />
         </LinearLayout>
