Sửa lại thanh nav_đệp hơn.java

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -134,6 +134,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="start"
+            app:headerLayout="@layout/nav_header_main"
             app:menu="@menu/navigation_menu_left"/>
 
     </androidx.drawerlayout.widget.DrawerLayout>
